2008-11-03  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: David Schleef  <ds@schleef.org>

	* libs/gst/net/Makefile.am:
	Add WIN32_LIBS to libgstnet LIBADD. Fixes #557300.

2008-10-31  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstregistrybinary.c:
	  Oh my, studip, stupid me. Remove double stat() call.

2008-10-31  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstpreset.c:
	  Use g_unlink instead of unlink.

	* gst/gststructure.c:
	  Use glib type.

	* gst/gstutils.c:
	  Add a FIXME:.

	* gst/gsttaglist.c:
	* gst/gsttypefind.c:
	* gst/gstvalue.c:
	  Formatting & whitespaces.

2008-10-31  Stefan Kost  <ensonic@users.sf.net>

	* plugins/elements/gstidentity.c:
	  Doc typo. Use return value of parent_class->event.
  
	* plugins/elements/gsttypefindelement.c:
	  Chain up at the end for consistency.
  
2008-10-30  Stefan Kost  <ensonic@users.sf.net>

	* docs/Makefile.am:
	* docs/gst/gstreamer-docs.sgml:
	* docs/gst/gstreamer-sections.txt:
	* docs/gst/running.xml:
	* docs/libs/gstreamer-libs-docs.sgml:
	  Change to xinclude based build - its faster and easier to maintain.

2008-10-30  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstregistrybinary.c:
	* gst/gstregistryxml.c:
	  Use g_unlink() as none of these are directories.

2008-10-29  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/gstpipeline.c: (gst_pipeline_provide_clock_func):
	Some more comments.

2008-10-27  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstbasetransform.c:
	(gst_base_transform_find_transform), (gst_base_transform_getrange):
	If we have a fixate function, call it even if we already have fixed caps
	because the subclass might add some caps. Makes audioconvert add a
	default channel layout.

2008-10-24  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstbasetransform.c:
	(gst_base_transform_prepare_output_buffer),
	(gst_base_transform_getrange):
	Clear the output buffer variable.
	Cleanups to the error path in the getrange function.
	Fixes #557649.
